; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_cq.c_mlx5_ib_modify_cq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_cq.c_mlx5_ib_modify_cq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_cq = type { i32 }
%struct.mlx5_ib_dev = type { i32 }
%struct.mlx5_ib_cq = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@cq_moderation = common dso_local global i32 0, align 4
@ENOSYS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"modify cq 0x%x failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5_ib_modify_cq(%struct.ib_cq* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ib_cq*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mlx5_ib_dev*, align 8
  %9 = alloca %struct.mlx5_ib_cq*, align 8
  %10 = alloca i32, align 4
  store %struct.ib_cq* %0, %struct.ib_cq** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load %struct.ib_cq*, %struct.ib_cq** %5, align 8
  %12 = getelementptr inbounds %struct.ib_cq, %struct.ib_cq* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.mlx5_ib_dev* @to_mdev(i32 %13)
  store %struct.mlx5_ib_dev* %14, %struct.mlx5_ib_dev** %8, align 8
  %15 = load %struct.ib_cq*, %struct.ib_cq** %5, align 8
  %16 = call %struct.mlx5_ib_cq* @to_mcq(%struct.ib_cq* %15)
  store %struct.mlx5_ib_cq* %16, %struct.mlx5_ib_cq** %9, align 8
  %17 = load %struct.mlx5_ib_dev*, %struct.mlx5_ib_dev** %8, align 8
  %18 = getelementptr inbounds %struct.mlx5_ib_dev, %struct.mlx5_ib_dev* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @cq_moderation, align 4
  %21 = call i32 @MLX5_CAP_GEN(i32 %19, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %3
  %24 = load i32, i32* @ENOSYS, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %4, align 4
  br label %46

26:                                               ; preds = %3
  %27 = load %struct.mlx5_ib_dev*, %struct.mlx5_ib_dev** %8, align 8
  %28 = getelementptr inbounds %struct.mlx5_ib_dev, %struct.mlx5_ib_dev* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.mlx5_ib_cq*, %struct.mlx5_ib_cq** %9, align 8
  %31 = getelementptr inbounds %struct.mlx5_ib_cq, %struct.mlx5_ib_cq* %30, i32 0, i32 0
  %32 = load i32, i32* %7, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @mlx5_core_modify_cq_moderation(i32 %29, %struct.TYPE_2__* %31, i32 %32, i32 %33)
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %10, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %26
  %38 = load %struct.mlx5_ib_dev*, %struct.mlx5_ib_dev** %8, align 8
  %39 = load %struct.mlx5_ib_cq*, %struct.mlx5_ib_cq** %9, align 8
  %40 = getelementptr inbounds %struct.mlx5_ib_cq, %struct.mlx5_ib_cq* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @mlx5_ib_warn(%struct.mlx5_ib_dev* %38, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %42)
  br label %44

44:                                               ; preds = %37, %26
  %45 = load i32, i32* %10, align 4
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %44, %23
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local %struct.mlx5_ib_dev* @to_mdev(i32) #1

declare dso_local %struct.mlx5_ib_cq* @to_mcq(%struct.ib_cq*) #1

declare dso_local i32 @MLX5_CAP_GEN(i32, i32) #1

declare dso_local i32 @mlx5_core_modify_cq_moderation(i32, %struct.TYPE_2__*, i32, i32) #1

declare dso_local i32 @mlx5_ib_warn(%struct.mlx5_ib_dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
